# app.ts
@@ -7,6 +7,7 @@ import type errorTask from './interface/errorTask.ts'
 import responseError from './service/responseError'
 
 import projectRouter from './routes/project'
+import uploadRouter from './routes/upload'
 
 // Swagger 使用
 import swaggerUi from 'swagger-ui-express'
@@ -35,6 +36,7 @@ app.use(cookieParser())
 app.use(express.static(path.join(__dirname, 'public')))
 
 app.use('/project', projectRouter)
+app.use('/upload', uploadRouter)
 
 // 404 路由
 app.use((req: Request, res: Response) => {
